--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="content-wrap">
       <img class="profile-img col-narrow" src="images/christina-truong.png" alt="Christina Truong">
       <div class="col-wide">
-        <h1>Christina Truong</h1>
+        <h1>Ammar Ali</h1>
         <h2>Web Developer + Educator</h2>
         <p>As a developer, I specialize in creating modular and scalable front-end architectures. As an educator, I focus on creating inclusive learning environments, instructor training and curriculum development. I'm also a certified <a href="https://www.lesmills.com/workouts/fitness-classes/bodypump/" target="_blank">BODYPUMP</a> Instructor!</p>
       </div>
